--- a/src/main/resources/templates/creepyguy/levels.twig
+++ b/src/main/resources/templates/creepyguy/levels.twig
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="/static/css/reset.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 </head>
 
 <body>
@@ -16,20 +16,20 @@
         <header>
             <div class="title_container">
                 <figure>
-                    <img id="logo" src="../img/logo.png" alt="logo">
+                    <img id="logo" src="/static/img/logo.png" alt="logo">
                 </figure>
-                <a href="../login.html"><img id="logout" src="../img/logout.png" alt="logout"></a>
+                <a href="/login"><img id="logout" src="/static/img/logout.png" alt="logout"></a>
             </div>
             <nav>
                 <ul>
                     <li>
-                        <a href="../creepyguy/classes.html">CLASSES MANAGEMENT</a>
+                        <a href="/creepyguy/classes">CLASSES MANAGEMENT</a>
                     </li>
                     <li>
-                        <a href="../creepyguy/mentors.html">MENTORS MANAGEMENT</a>
+                        <a href="/creepyguy/mentors">MENTORS MANAGEMENT</a>
                     </li>
                     <li>
-                        <a href="../creepyguy/levels.html">LEVELS MANAGEMENT</a>
+                        <a href="/creepyguy/levels">LEVELS MANAGEMENT</a>
                     </li>
                 </ul>
             </nav>
@@ -39,7 +39,7 @@
         <div class="main_content">
             <h1>Experience levels</h1>
             <p>Determine how many coolcoins a student have to gain, to reach new level.</p>
-
+            <!-- here we have to input levels into input fields gathered from levelsDAOimpl -->
             <div>
                 <p>LEVEL 1: <span id="lvl1_min">0</span>
                     - <input type="number" name="lvl1_upper_limit" id="lvl1_limit" onchange="determineNextLvlMin(1); determineThisLvlUpperLimitMinimum(1)">cc</p>
@@ -74,7 +74,7 @@
     </div>
 
 </body>
-<script src="../js/script.js"></script>
-<script src="../js/levels.js"></script>
+<script src="/static/js/script.js"></script>
+<script src="/static/js/levels.js"></script>
 
 </html>
