--- a/src/main/resources/templates/creepyguy/classes.twig
+++ b/src/main/resources/templates/creepyguy/classes.twig
@@ -23,13 +23,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/static/creepyguy/classes.html">CLASSES MANAGEMENT</a>
+                        <a href="/classes">CLASSES MANAGEMENT</a>
                     </li>
                     <li>
-                        <a href="/static/creepyguy/mentors.html">MENTORS MANAGEMENT</a>
+                        <a href="/mentors">MENTORS MANAGEMENT</a>
                     </li>
                     <li>
-                        <a href="/static/creepyguy/levels.html">LEVELS MANAGEMENT</a>
+                        <a href="/levels">LEVELS MANAGEMENT</a>
                     </li>
                 </ul>
             </nav>
