Correct classes.twig again

--- a/src/main/resources/templates/creepyguy/classes.twig
+++ b/src/main/resources/templates/creepyguy/classes.twig
@@ -23,13 +23,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/classes">CLASSES MANAGEMENT</a>
+                        <a href="/creepyguy/classes">CLASSES MANAGEMENT</a>
                     </li>
                     <li>
-                        <a href="/mentors">MENTORS MANAGEMENT</a>
+                        <a href="/creepyguy/mentors">MENTORS MANAGEMENT</a>
                     </li>
                     <li>
-                        <a href="/levels">LEVELS MANAGEMENT</a>
+                        <a href="/creepyguy/levels">LEVELS MANAGEMENT</a>
                     </li>
                 </ul>
             </nav>
