--- a/src/main/resources/templates/mentor/artifacts.twig
+++ b/src/main/resources/templates/mentor/artifacts.twig
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/cards.css">
+    <link rel="stylesheet" href="/static/css/reset.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/cards.css">
 </head>
 
 <body>
@@ -17,21 +17,21 @@
         <header>
             <div class="title_container">
                 <figure>
-                    <img id="logo" src="../img/logo.png" alt="logo">
+                    <img id="logo" src="/static/img/logo.png" alt="logo">
                 </figure>
-                <a id="logout" href="../login.html"><img src="../img/logout.png" alt="logout"></a>
+                <a id="logout" href="/login"><img src="/static/img/logout.png" alt="logout"></a>
             </div>
 
             <nav>
                 <ul>
                     <li>
-                        <a href="codecoolers.html">CODECOOLERS</a>
+                        <a href="/mentor/codecoolers">CODECOOLERS</a>
                     </li>
                     <li>
-                        <a href="quests.html">QUEST</a>
+                        <a href="/mentor/quests">QUEST</a>
                     </li>
                     <li>
-                        <a href="artifacts.html">ARTIFACTS</a>
+                        <a href="/mentor/artifacts">ARTIFACTS</a>
                     </li>
                 </ul>
             </nav>
@@ -53,7 +53,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Combat training</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
+                            <img class="pictures_on_card" src="/static/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -71,7 +71,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1"><input type="text" placeholder="Title of card / quest..."></p>
                         <div id="pictures_on_card_workshop">
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
+                            <img class="pictures_on_card" src="/static/img/heroes.jpg" alt="Picture of Hero" />
 
                             <button id="button_basic_quest" type="button">Basic Item</button>
                             <button id="button_extra_quest" type="button">Magic Item</button>
@@ -96,7 +96,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Combat training</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
+                            <img class="pictures_on_card" src="/static/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -112,7 +112,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Sanctuary</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
+                            <img class="pictures_on_card" src="/static/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
 
                         <ul>
@@ -129,7 +129,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Time Travel</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
+                            <img class="pictures_on_card" src="/static/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -151,7 +151,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Circle of Sorcery</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
+                            <img class="pictures_on_card" src="/static/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -168,7 +168,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Code Elemental</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
+                            <img class="pictures_on_card" src="/static/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
 
                         <ul>
@@ -186,7 +186,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Tome of knowledge</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
+                            <img class="pictures_on_card" src="/static/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -207,7 +207,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Transform mentors</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
+                            <img class="pictures_on_card" src="/static/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
                         <ul>
                             <li>
@@ -225,7 +225,7 @@
                     <div class="card_artefacts">
                         <p class="text_on_card_1">Teleport</p>
                         <div>
-                            <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="Picture of Hero" />
+                            <img class="pictures_on_card" src="/static/img/heroes.jpg" alt="Picture of Hero" />
                         </div>
 
                         <ul>
@@ -267,6 +267,6 @@
     </div>
 
 </body>
-<script src="../js/script.js"></script>
+<script src="/static/js/script.js"></script>
 
 </html>
