--- a/src/main/resources/templates/student/crowdfunding.twig
+++ b/src/main/resources/templates/student/crowdfunding.twig
@@ -23,13 +23,13 @@
                 <span id="header_icons">
 
                     <figure class="icon">
-                        <a href="/inventory">
+                        <a href="/student/inventory">
                             <img src="/static/img/backpack.png" class="icon_img" alt="backpack">
                         </a>
                     </figure>
 
                     <figure class="icon">
-                        <a href="/wallet">
+                        <a href="/student/wallet">
                             <img src="/static/img/wallet.png" class="icon_img" alt="wallet">
                             <div id="amount_of_coolcoins"> {{% coolcoins_amount %}} </div>
                         </a>
@@ -50,13 +50,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/store">STORE</a>
+                        <a href="/student/store">STORE</a>
                     </li>
                     <li>
-                        <a href="/crowdfunding">CROWDFUNDING</a>
+                        <a href="/student/crowdfunding">CROWDFUNDING</a>
                     </li>
                     <li>
-                        <a href="/artifacts">QUESTS</a>
+                        <a href="/student/artifacts">QUESTS</a>
                     </li>
                 </ul>
             </nav>
