--- a/src/main/resources/templates/student/wallet.twig
+++ b/src/main/resources/templates/student/wallet.twig
@@ -22,13 +22,13 @@
                 <span id="header_icons">
 
                     <figure class="icon">
-                        <a href="/inventory">
+                        <a href="/student/inventory">
                             <img src="/static/img/backpack.png" class="icon_img" alt="backpack">
                         </a>
                     </figure>
 
                     <figure class="icon">
-                        <a href="/wallet">
+                        <a href="/student/wallet">
                             <img src="/static/img/wallet.png" class="icon_img" alt="wallet">
                             <div id="amount_of_coolcoins"> {{ coolcoins_amount }} </div>
                         </a>
@@ -49,13 +49,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/store">STORE</a>
+                        <a href="/student/store">STORE</a>
                     </li>
                     <li>
-                        <a href="/crowdfunding">CROWDFUNDING</a>
+                        <a href="/student/crowdfunding">CROWDFUNDING</a>
                     </li>
                     <li>
-                        <a href="/artifacts">ARTIFACTS</a>
+                        <a href="/student/artifacts">ARTIFACTS</a>
                     </li>
                 </ul>
             </nav>
