Remove script.js

--- a/src/main/resources/templates/student/artifacts.twig
+++ b/src/main/resources/templates/student/artifacts.twig
@@ -41,7 +41,9 @@
                     </figure>
 
                     <figure class="icon">
-                        <a href="/static/login.html"><img src="/student/img/logout.png" class="icon_img" alt="logout"></a>
+                        <a href="/static/login.html">
+                            <img src="/static/img/logout.png" class="icon_img" alt="logout">
+                        </a>
                     </figure>
 
                 </span>
@@ -407,6 +409,5 @@
         </footer>
     </div>
 </body>
-<script src="../js/script.js"></script>
 
 </html>
