--- a/src/main/resources/templates/student/store.twig
+++ b/src/main/resources/templates/student/store.twig
@@ -42,7 +42,9 @@
                     </figure>
 
                     <figure id="icon">
-                        <a href="../login.html"><img src="/static/img/logout.png" class="icon_img" alt="logout"></a>
+                        <a href="../login.html">
+                            <img src="/static/img/logout.png" class="icon_img" alt="logout">
+                        </a>
                     </figure>
 
                 </span>
@@ -252,7 +254,6 @@
     </div>
 
 </body>
-<script src="/static/js/script.js"></script>
 <script src="/static/js/cards.js"></script>
 
 </html>
