--- a/src/main/resources/templates/student/quests.twig
+++ b/src/main/resources/templates/student/quests.twig
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Store</title>
+    <title>Quests</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
@@ -41,7 +41,7 @@
                     </figure>
 
                     <figure class="icon">
-                        <a href="/static/login.html"><img src="/student/img/logout.png" class="icon_img" alt="logout"></a>
+                        <a href="/static/login.html"><img src="/static/img/logout.png" class="icon_img" alt="logout"></a>
                     </figure>
 
                 </span>
@@ -178,6 +178,10 @@
         </footer>
     </div>
 </body>
-<script src="../js/script.js"></script>
+
+
+
+
+
 
 </html>
