--- a/src/main/resources/templates/student/store.twig
+++ b/src/main/resources/templates/student/store.twig
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Store_quests</title>
+    <title>Store_artifacts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
@@ -42,7 +42,7 @@
                     </figure>
 
                     <figure class="icon">
-                        <a href="/static/login.html"><img src="/student/img/logout.png" class="icon_img" alt="logout"></a>
+                        <a href="/static/login.html"><img src="/static/img/logout.png" class="icon_img" alt="logout"></a>
                     </figure>
 
                 </span>
@@ -134,7 +134,7 @@
 
 
 </body>
-<script src="/static/js/script.js"></script>
-<script src="/static/js/cards.js"></script>
+
 
 </html>
+
