Add /logout context to logut button

--- a/src/main/resources/templates/mentor/artifacts.twig
+++ b/src/main/resources/templates/mentor/artifacts.twig
@@ -19,7 +19,9 @@
                 <figure>
                     <img id="logo" src="/static/img/logo.png" alt="logo">
                 </figure>
-                <a id="logout" href="/login"><img src="/static/img/logout.png" alt="logout"></a>
+                <a id="logout" href="/logout">
+                    <img src="/static/img/logout.png" alt="logout">
+                </a>
             </div>
 
             <nav>
