--- a/src/main/resources/templates/student/artifacts.twig
+++ b/src/main/resources/templates/student/artifacts.twig
@@ -41,7 +41,7 @@
                     </figure>
 
                     <figure class="icon">
-                        <a href="/static/login.html">
+                        <a href="/logout">
                             <img src="/static/img/logout.png" class="icon_img" alt="logout">
                         </a>
                     </figure>
