--- a/src/main/resources/templates/student/crowdfunding.twig
+++ b/src/main/resources/templates/student/crowdfunding.twig
@@ -41,7 +41,9 @@
                     </figure>
 
                     <figure class="icon">
-                        <a href="/login"><img src="/static/img/logout.png" class="icon_img" alt="logout"></a>
+                        <a href="/logout">
+                            <img src="/static/img/logout.png" class="icon_img" alt="logout">
+                        </a>
                     </figure>
 
                 </span>
