--- a/src/main/resources/templates/student/store.twig
+++ b/src/main/resources/templates/student/store.twig
@@ -42,7 +42,7 @@
                     </figure>
 
                     <figure id="icon">
-                        <a href="../login.html">
+                        <a href="/logout">
                             <img src="/static/img/logout.png" class="icon_img" alt="logout">
                         </a>
                     </figure>
