--- a/src/main/resources/templates/creepyguy/levels.twig
+++ b/src/main/resources/templates/creepyguy/levels.twig
@@ -18,7 +18,9 @@
                 <figure>
                     <img id="logo" src="/static/img/logo.png" alt="logo">
                 </figure>
-                <a href="/login"><img id="logout" src="/static/img/logout.png" alt="logout"></a>
+                <a href="/logout">
+                    <img id="logout" src="/static/img/logout.png" alt="logout">
+                </a>
             </div>
             <nav>
                 <ul>
