--- a/src/main/resources/templates/student/wallet.twig
+++ b/src/main/resources/templates/student/wallet.twig
@@ -40,7 +40,7 @@
                     </figure>
 
                     <figure class="icon">
-                        <a href="/login">
+                        <a href="/logout">
                             <img src="/static/img/logout.png" class="icon_img" alt="logout">
                         </a>
                     </figure>
